the start of handling bugs regarding the ending of the game